# petsc

./: .clang-format  .dir-locals.el  .editorconfig  .gitignore  .gitlab-alcf-ci.yaml  .gitlab-alcf-ci.yml  .gitlab-build-status.sh  .gitlab-ci.yml  .gitmessage  .hgignore  .hgtags  .mailmap  .readthedocs.yml  .travis.yml  AGENTS.md  CHANGES.rst  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING  ConfigureFixes.tex  DESCRIPTION.rst  GNUmakefile  HISTORY.txt  Jenkinsfile  LICENSE  LICENSE.rst  LICENSE.txt  MANIFEST.in  RDict.py  README.md  README.rst  README.txt  TODO  action.py  args.py  argtest.py  babel.py  base.py  bitbucket-pipelines.yml  bk.py  (+61 more)
share/petsc/: CMakeLists.txt  chkerrconvert.py
share/petsc/datafiles/matrices/: hpd-complex-int64-float32  hpd-complex-int64-float64  m_05_05_crk.mtx  nh-complex-int32-float32  nh-complex-int64-float32  nh-complex-int64-float64  ns-real-int32-float32  ns-real-int32-float64  ns-real-int64-float32  ns-real-int64-float64  ritz2  ritz5  spd-real-int32-float128  spd-real-int32-float32  spd-real-int32-float64  spd-real-int64-float32  spd-real-int64-float64  tiny_system  tiny_system_with_x0  tiny_system_with_x0.mat  tiny_system_with_x0_complex.mat  tiny_system_x0
share/petsc/datafiles/meshes/: 1d-2elems.e  2Dgrd.exo  2x2x2_Q3_wave.cgns  FourBrickHex-large.exo  FourBrickTet-large.exo  FourSquareH-large.exo  FourSquareQ-large.exo  FourSquareT-large.exo  Rect-tri3.exo  SquareFaceSet.exo  TwoQuads.exo  annulus-20.exo  barycentricallyrefinedcube.h5  blockcylinder-50.exo  blockcylinder-50.h5  blockcylinder-50.xmf  cow.msh  cube_5tets_ascii.cas  cube_periodic.msh  cube_periodic_bin.msh  cube_q2.msh  cube_q3.msh  cylinder.med  doublet-tet.msh  gmsh-3d-ascii-32.msh  gmsh-3d-ascii-64.msh  gmsh-3d-ascii.msh2  gmsh-3d-ascii.msh4  gmsh-3d-binary-32.msh  gmsh-3d-binary-64.msh  gmsh-3d-binary.msh2  gmsh-3d-binary.msh4  gmsh-3d.geo  gmsh-B2qua.geo  gmsh-B2tri.geo  gmsh-B3hex.geo  gmsh-B3tet.geo  gmsh-hex-20node.msh  gmsh-hex.geo  gmsh-qua-8node.msh  (+49 more)
share/petsc/matlab/: PetscBagRead.m  PetscBinaryRead.m  PetscBinaryWrite.m  PetscReadBinaryMatlab.m  PetscReadBinaryTrajectory.m  UFgetPetscMat.m  generatePetscTestFiles.m  laplacian.m  launch.m  makefile
share/petsc/matlab/@PetscOpenFile/: PetscOpenFile.m  write.m
share/petsc/matlab/@PetscOpenSocket/: PetscOpenSocket.m  close.m  read.m  write.m
share/petsc/matlab/classes/: Petsc.m  PetscCHKERRQ.m  PetscFinalize.m  PetscInitialize.m  PetscPC.m  PetscSNES.m  PetscTSMonitorInternal.m  matlabheader.h
share/petsc/saws/: documentation  linearsolveroptions.html  readme
share/petsc/saws/js/: PETSc.js  boxTree.js  defaults.js  drawDiagrams.js  events.js  getCmdOptions.js  listLogic.js  main.js  matrixTex.js  parsePrefix.js  populateLists.js  recordSawsData.js  tree.js  utils.js
share/petsc/suppressions/: lsan  ubsan  valgrind
share/petsc/valgrind/: petsc-val.supp
share/petsc/xml/: fontlist-v330.json  performance_xml2html.xsl
src/binding/petsc4py/: .cython-lint.toml  .gitignore  .ruff.toml  CHANGES.rst  DESCRIPTION.rst  LICENSE.rst  MANIFEST.in  README.rst  makefile  pyproject.toml  setup.cfg  setup.py  tox.ini
src/binding/petsc4py/conf/: baseconf.py  confpetsc.py  cyautodoc.py  cythonize.py  cythonize.sh  epydoc.cfg  epydocify.py  metadata.py  petscconf.py  requirements-docs.txt  requirements-lint.txt  requirements-stubtest.txt  stubgen.py  stubtest-allowlist
src/binding/petsc4py/demo/: makefile
src/binding/petsc4py/docs/: index.rst
src/binding/petsc4py/src/: PETSc.c  __init__.py  __main__.py  cython.h  libpetsc4py.c  libpetsc4py.h  pyapicompat.h
(+23434 files in other folders)
