[config]
petsc_dir  = $PETSC_DIR
petsc_arch = $PETSC_ARCH

[build]
debug = 0

[sdist]
force_manifest = 1

[nosetests]
where = test

[options.extras_require]
doc =
    pydata-sphinx-theme==0.12.0
    sphinx==5.3.0
    sphinxcontrib-bibtex>=1.0.0
    sphinxcontrib-katex
    sphinx-design
    sphinx-copybutton
